# high-performance-json-viewer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  imgui.ini
.github/workflows/: build.yml
include/: panel_manager.hpp
include/panels/: file_chooser_panel.hpp  json_viewer_panel.hpp  loading_panel.hpp
include/utils/: json_data_store.hpp  json_parser.hpp  loading_state.hpp
scripts/: build.sh  clean.sh  format.sh
src/: main.cpp
src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdlrenderer3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/panels/: file_chooser_panel.cpp  json_viewer_panel.cpp  loading_panel.cpp
src/utils/: json_data_store.cpp  json_parser.cpp  loading_state.cpp
tests/: test_main.cpp
